back-up/ocm-c2/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/validators.schema.kubedb.com.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubedb
    meta.helm.sh/release-namespace: kubedb
  creationTimestamp: "2023-08-11T08:42:12Z"
  generation: 2
  labels:
    app.kubernetes.io/component: kubedb-schema-manager
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/version: v0.10.0-rc.0
    helm.sh/chart: kubedb-webhook-server-v0.10.0-rc.0
    helm.toolkit.fluxcd.io/name: kubedb
    helm.toolkit.fluxcd.io/namespace: kubeops
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
          f:helm.toolkit.fluxcd.io/name: {}
          f:helm.toolkit.fluxcd.io/namespace: {}
      f:webhooks:
        .: {}
        k:{"name":"mongodbdatabasewebhook.validators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mysqldatabasewebhook.validators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"postgresdatabasewebhook.validators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: helm-controller
    operation: Update
    time: "2023-08-11T08:42:12Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"mongodbdatabasewebhook.validators.schema.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"mysqldatabasewebhook.validators.schema.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"postgresdatabasewebhook.validators.schema.kubedb.com"}:
          f:clientConfig:
            f:caBundle: {}
    manager: kubedb-webhook-server
    operation: Update
    time: "2023-08-11T08:42:19Z"
  name: validators.schema.kubedb.com
  resourceVersion: "4890"
  uid: e446a7d4-9a5a-42fd-b296-1c0c05832586
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEE0TURBeE4xb1hEVE16TURnd09EQTRNREF4TjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTDB2CnAxSitCbDVRb0tla20zL0xvM1BUSTFGVVIvcGxWSU5KZDU0aER5SWQxZFZWZzFhT3YyUVZ0YnVHbWVpTUdGUkYKZ3FYQnJPaWx1ZkMydktyRU5sNFl6NUdsTTlVRVdWNDVzWGlNWHhReU1FbGNnM3I2QXZZdmcvcU5XTzR3anBqRQpaaXdtYWhRQ0RHUV [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/validators.schema.kubedb.com/v1alpha1/mysqldatabasewebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mysqldatabasewebhook.validators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mysqldatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEE0TURBeE4xb1hEVE16TURnd09EQTRNREF4TjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTDB2CnAxSitCbDVRb0tla20zL0xvM1BUSTFGVVIvcGxWSU5KZDU0aER5SWQxZFZWZzFhT3YyUVZ0YnVHbWVpTUdGUkYKZ3FYQnJPaWx1ZkMydktyRU5sNFl6NUdsTTlVRVdWNDVzWGlNWHhReU1FbGNnM3I2QXZZdmcvcU5XTzR3anBqRQpaaXdtYWhRQ0RHUV [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/validators.schema.kubedb.com/v1alpha1/mongodbdatabasewebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mongodbdatabasewebhook.validators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mongodbdatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EZ3hNVEE0TURBeE4xb1hEVE16TURnd09EQTRNREF4TjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTDB2CnAxSitCbDVRb0tla20zL0xvM1BUSTFGVVIvcGxWSU5KZDU0aER5SWQxZFZWZzFhT3YyUVZ0YnVHbWVpTUdGUkYKZ3FYQnJPaWx1ZkMydktyRU5sNFl6NUdsTTlVRVdWNDVzWGlNWHhReU1FbGNnM3I2QXZZdmcvcU5XTzR3anBqRQpaaXdtYWhRQ0RHUV [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/validators.schema.kubedb.com/v1alpha1/postgresdatabasewebhooks
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: postgresdatabasewebhook.validators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - postgresdatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
